<resources>
    <string name="app_name">Simplify Report</string>

    <string name="text_login_mobile">We will send you an <b>One Time Password</b>\n on your registering mobile number</string>
    <string name="login_otp_text">Enter the OTP sent to <b>+91-XXXXXXXXXX</b></string>

    <string name="fire_alert">Fire Alert</string>
    <string name="medical_alert">Medical Alert</string>
    <string name="police_report">Police Report</string>
    <string name="enter_age">Enter Age</string>
    <string name="fill_the_patient_form">Fill the patient form :</string>
    <string name="enter_patient_name">Enter Patient Name</string>
    <string name="enter_patient_gender">Enter Patient Gender</string>
    <string name="encounter_fire_nearby_pin_the_location_and_hit_alert">Encounter fire nearby pin the location and hit alert</string>
    <string name="alert">Alert</string>
    <string name="call_an_ambulance">Call an Ambulance</string>
    <string name="enter_patient_problem">Enter Patient Problem</string>
    <string name="enter_patient_phone_number">Enter patient phone number</string>
    <string name="submit">Submit</string>
    <string name="describe_your_problem_in_detail">Describe your problem in detail</string>
    <string name="SHARED_PREF">SHARED_PREF</string>
    <string name="PHONE">PHONE</string>
    <string name="success">Success</string>
    <string name="loading">Loading</string>
    <string name="you_have_reported_fire_in_your_area">You have Reported Fire in your Area</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="permissions_not_granted_by_the_user">Permissions not granted by the user</string>
    <string name="history">History</string>
    <string name="mobile_number_cant_be_blank">Mobile Number can\'t be blank</string>
    <string name="phone_verified">Phone Verified</string>
    <string name="error_sending_otp">Error Sending OTP</string>
    <string name="you_have_reported_a_patient">You have Reported a Patient</string>
    <string name="button_pressed">button pressed</string>
    <string name="found">Found</string>
    <string name="missing">Missing</string>
    <string name="death">Death</string>
    <string name="robbery">Robbery</string>
    <string name="all_fields_are_compulsory">All fields are compulsory</string>
    <string name="turn_on_location_access_from_settings">Turn on Location Access from settings</string>
    <string name="ambulance">Ambulance</string>
    <string name="create_account">Create Account</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="patient_name">Patient Name</string>
    <string name="verification">Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="didn_t_received_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="permanent_address">Permanent Address</string>
    <string-array name="blood_group">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>B-</item>
        <item>O-</item>
        <item>AB-</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
</resources>
