<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginOTPFragment">

    <ImageView
        android:id="@+id/otpButtonBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp"/>


    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/otp_verification" />

    <ImageView
        android:id="@+id/otpImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:src="@drawable/ic_authentication"/>

    <TextView
        android:id="@+id/tvOtpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otpImage"
        android:layout_marginTop="30dp"
        android:text="@string/login_otp_text"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:id="@+id/layoutOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvOtpTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="10dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:imeOptions="actionNext"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="10dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:imeOptions="actionNext"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="10dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:imeOptions="actionNext"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="10dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/otp5"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:imeOptions="actionNext"
            android:textSize="18dp"
            android:textStyle="bold" />

        <View
            android:layout_width="10dp"
            android:layout_height="50dp" />

        <EditText
            android:id="@+id/otp6"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:maxLength="1"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:imeOptions="actionDone"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutOtp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/didn_t_received_the_otp"
            android:textAlignment="center"
            android:textColor="@android:color/darker_gray"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/buttonResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/resend_otp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="14dp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonVerifyOtp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutResend"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:shadowRadius="5"
        android:text="@string/verify"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:rippleColor="@color/rippleColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>